% Generated by roxygen2: do not edit by hand
% Please edit documentation in R/madness_pkg.r
\name{madness-NEWS}
\alias{madness-NEWS}
\title{News for package \sQuote{madness}:}
\description{
News for package \sQuote{madness}.

\newcommand{\pkg}{#1}
\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\newcommand{\madness}{\CRANpkg{madness}}
}
\section{\madness{} Initial Version 0.1.0 (2015-12-15) }{

\itemize{
\item first github release.
}
}
