@@ -2,8 +2,8 @@ Package: madness
 Maintainer: Steven E. Pav <shabbychef@gmail.com>
 Authors@R: c(person(c("Steven", "E."), "Pav", role=c("aut","cre"),
     email="shabbychef@gmail.com"))
-Version: 0.0.0.5530
-Date: 2015-12-13
+Version: 0.1.0
+Date: 2015-12-14
 License: LGPL-3
 Title: Automatic Differentiation of Multivariate Operations
 BugReports: https://github.com/shabbychef/madness/issues
@@ -16,13 +16,11 @@ Depends:
 Imports:
     matrixcalc,
     expm,
-    gtools,
     methods
 Suggests:
     testthat,
     knitr
 URL: https://github.com/shabbychef/madness
-VignetteBuilder: knitr
 Collate:
     'AllClass.r'
     'utils.r'
