@@ -53,7 +53,6 @@ exportMethods(vech)
 exportMethods(vtag)
 exportMethods(xtag)
 import(expm)
-import(gtools)
 import(matrixcalc)
 import(methods)
 importFrom(methods,cbind2)
