@@ -20,13 +20,12 @@ Depends:
 Imports:
     matrixcalc,
     expm,
-    gtools,
     methods
 Suggests: 
     testthat, 
     knitr
 URL: https://github.com/shabbychef/PKG_NAME()
-VignetteBuilder: knitr
+dnl VignetteBuilder: knitr
 Collate:
 m4_R_FILES()
 dnl vim:ts=2:sw=2:tw=79:syn=m4:ft=m4
